Fix deprecated API and raw type compiler warnings
- Replace deprecated Float/Double constructors with valueOf() or autoboxing
- Remove unused field _se and deltaTOld variable
- Remove redundant strictfp modifier (redundant since Java 17)
- Remove deprecated finalize() method
- Add @SuppressWarnings("deprecation") to intentionally deprecated API methods
- Fix raw type usage with proper generic types and diamond operator
- Suppress Observer/Observable deprecation warnings (requires major refactoring)

All changes maintain backward compatibility and improve code quality
for modern Java versions.

🤖 Generated with [Claude Code](https://claude.com/claude-code)

Co-Authored-By: Claude <noreply@anthropic.com>